--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 extend: {
                     colors: {
                         primary: 'rgb(171, 239, 95)',
-                        body: ''
+                        secondary: '#212121',
+                        custom:'rgb(115, 115, 115)',
+                        btnPrimary: 'rgba(171, 239, 95, 0.5)',
                     },
                     fontFamily: {
                         Manrope: 'Manrope',
@@ -43,7 +45,7 @@
 <body class="font-Manrope">
 
     <!-- header section start -->
-    <header class=" bg-[#F6F6F6]"> 
+    <header class="bg-[#F6F6F6] pb-4"> 
         <nav class="w-11/12 mx-auto">
             <div class="navbar p-0 py-2">
                 <div class="navbar-start">
@@ -66,7 +68,7 @@
                     </ul>
                 </div>
                 <div class="navbar-end ">
-                    <div class="hidden sm:flex justify-between items-center gap-4 font-semibold xl:text-xl">
+                    <div class="hidden sm:flex justify-between items-center gap-4 font-semibold xl:text-xl cursor-pointer">
                             <i class="fas fa-search bg-white p-2 xl:p-3  rounded-full"></i>
                             <i class="fas fa-shopping-cart bg-white p-2  xl:p-3 rounded-full"></i>
                         
@@ -81,20 +83,44 @@
                     
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="font-medium text-lg lg:hidden">
-                            <button class="px-3 py-1 bg-white rounded-lg ml-4"><i class="fas fa-bars"></i></button>
+                            <button class="px-4 py-2 bg-white rounded-lg ml-4"><i class="fas fa-bars"></i></button>
                         </div>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content rounded-box z-[1] mt-3 w-44 p-2 shadow text-lg font-medium right-0">
-                            <li class="font-bold text-[#494949]"><a href="#">Home</a></li>
-                            <li class=""><a href="#"> Services</a></li>
-                            <li class=""><a href="#">Portfolio</a></li>
-                            <li class=""><a href="#">Blog</a></li>
-                            <li class=""><a href="#">Contact Us</a></li>
+                        <li class="font-bold text-[#494949]"><a href="#" class="px-2 xl:p-3">Home</a></li>
+                        <li class=""><a href="#" class="px-2 xl:p-3">Portfolio</a></li>
+                        <li class=""><a href="#" class="px-2 xl:p-3"> Services</a></li>
+                        <li class=""><a href="#" class="px-2 xl:p-3">Blog</a></li>
+                        <li class=""><a href="#" class="px-2 xl:p-3">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
+
+
+        <!-- banner-section  -->
+  
+        <section class="w-11/12 mx-auto mb-5 py-4">
+            <div class="sm:w-4/5 mx-auto flex  flex-col justify-center items-center ">
+                <div>
+                    <img src="./assets/banner.png" alt="">
+                </div>
+                <div class=" flex flex-col justify-center items-center text-center gap-4">
+                    <h1 class="lg:w-[80%] text-4xl xl:text-5xl font-extrabold leading-tight text-secondary">A barn house of this design has a striking appearance</h1>
+                    <p class="lg:w-[78%] text-custom ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
+                    metal accents, and large windows that flood the space with natural light.</p>
+                    <button class="w-full sm:w-60 flex justify-center items-center bg-btnPrimary gap-2 px-5 py-4 font-bold border border-green-400 rounded-full"> View Details
+                        <span class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                class="size-6 bg-primary rounded-full ">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 </html>
