--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
     <main class="mt-20">
-        <section class="bg-base-200 py-4">
+        <section class="bg-base-200 pt-20">
             <div class="">
                 <div class=" hidden lg:flex xl:w-11/12 mx-auto "><img src="./assets/Vector.png" alt=""></div>
              
@@ -181,6 +181,44 @@
             </div>
         </section>
 
+        <!-- Our Works Process -->
+
+        <section class="bg-base-200 pb-20">
+            <div class="w-11/12 mx-auto">
+                <div class="lg:text-center p-8">
+                    <a href="#" class="bg-white px-5 py-2 font-bold rounded-full "><i class="fa-solid fa-arrow-right mr-2 "></i>How we works</a>
+                    <h2 class="text-3xl md:text-4xl my-3 font-extrabold">Our Works Process</h2>
+                    <p class="lg:w-[60%] mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
+                    metal accents.</p>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 px-3 ">
+                    <div class="bg-[#E7C1D3]  rounded-xl p-3">
+                        <img src="./assets/concept.png" alt="">
+                        <h3 class="text-black font-bold my-2">Concept</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <div class="bg-[#EFDA6E] rounded-xl p-3">
+                        <img src="./assets/flow-chart.png" alt="">
+                        <h3 class="text-black font-bold my-2">Design Process</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <div class="bg-[#A4DAC3] rounded-xl p-3">
+                        <img src="./assets/vision.png" alt="">
+                        <h3 class="text-black font-bold my-2">Supervision</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <div class="bg-[#77AAEA] rounded-xl p-3">
+                        <img src="./assets/budget-planning.png" alt="">
+                        <h3 class="text-black font-bold my-2">Budget Planning</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
