set nav and banner background

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- header section start -->
     <!-- bg-[#F6F6F6] -->
-    <header class="pb-4 bg-base-200">
+    <header class="pb-4 bg-gradient-to-b from-base-300 to-base-50">
        
         <section class="">
             <nav class="w-11/12 mx-auto ">
@@ -236,7 +236,7 @@
                     <div class="bg-[#77AAEA] rounded-xl p-3">
                         <img src="./assets/budget-planning.png" alt="">
                         <h3 class="text-black font-bold my-2">Budget Planning</h3>
-                        <p>udget planning balances cost and design to achieve optimal project results.</p>
+                        <p>Budget planning balances cost and design to achieve optimal project results.</p>
                     </div>
                 </div>
             </div>
